style(cards): fix spacing between cards for responsive design

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,16 +61,12 @@ h2 {
 
 }
 
+
 .card {
 	height: 300px;
-	width: 375px;
 
 	border-radius: 5px;
 
-}
-
-.card-body {
-	width: 300px;
 }
 
 .donut-thumbnail {
@@ -80,8 +76,9 @@ h2 {
 }
 
 .container {
-	padding-top: 25px;
+	margin-top: 2rem;
 }
+
 
 
 
